<resources>
    <string name="app_name">SCP-096</string>
    <string name="educationButton">Нажмите кнопку "\Далее"\, чтобы перейти на следующий слайд</string>
    <string name="main_menu_text">Нажмите на экран, чтобы начать</string>
    <string name="music_text">Мелодии: \n
        Static - Five nights at Freddys\n
        Jay Varton - Final Examination (OST из "Игра на выживание")\n
    </string>

    <string name="pictures_text">Все изображения взяты из открытого доступа: Google картинки и YouTube
        (прохождение игры "\(dont) open your eyes)"\
    </string>

    <string name="text_about_program">Вы играете от лица сотрудника класса D фонда scp. Их используют
     как расходный материал при изучении новых объектов. В данной новелле будет показан один из дней такого сотрудника.
    Выживет ли данный персонаж или нет - зависит от вашего выбора ответа.</string>

    <string name="name_my">D-2725</string>
    <string name="name_doctor">Доктор Дэн</string>
    <string name="name_security">Охранник</string>
    <string name="name_scp">scp-096</string>

    <string name="text1">Наконец этот день настал. День, когда я смогу отправится из этой серой, сырой и пахнущей
    плесенью комнаты в свою родную квартиру.. Скоро должен прийти доктор. У него ко мне последнее задание, вроде как привезли
    новый объект..Конкретнее он обещал рассказать при встрече</string>

    <string name="text2">D-2725, на выход!</string>

    <string name="text3">Итак, меня зовут доктор Дэн, я введу тебя в курс дела. Пошли</string>

    <string name="text4">Чтож.. До нас дошли новости о новом объекте. Пока что ничего конкретнее не получилось узнать.
    Мы расчитываем, что ты поможешь нам с исследованием. Если все пройдет гладко, то тебя отпустят.
    Так же мы предоставим комнату на 1 ночь, так что проблем с ночлегом не возникнет</string>

    <string name="text5">Что на счет твоей задачи - она запредельно простая: Тебе выдадут конверт с несколькими фотографиями,
    нужно просто описать что на них изображено</string>

    <string name="text6">Вот мы и пришли. Держи конверт. Как зайдешь в комнату, садись за стол и приступай к работе.</string>

    <string name="text7">Удачи</string>

    <string name="text8">(Как-то все это слишком легко и подозрительно, учитывая, что раньше чуть ли
        не опыты ставили..Странно..)</string>

    <string name="text9">(Итак, какую фотографию посмотреть первой..?)</string>

    <string name="photo1">Фотография №1</string>
    <string name="photo2">Фотография №2</string>
    <string name="photo3">Фотография №3</string>
    <string name="photo4">Фотография №4</string>

    <string name="photo_text1">Пусто..Просто помехи</string>
    <string name="photo_text2">Вот черт, ЧТО ЭТО ТАКОЕ?? Длинные, непропорциональные конечности,
        бледная кожа..Откуда они вообще его взяли??</string>
    <string name="photo_text3">На этом фото можно хотя бы разглядеть его лицо..
    Огромный рот, впалые белые глаза..Такое ощущение, что у него нет ушей</string>
    <string name="photo_text4">Оно лежит на полу, поджав ноги и закрыв голову руками..Кажется он чем-то напуган..</string>

    <string name="text10">Так, нужно зафиксировать все наблюдения</string>

    <string name="text11">Задача выполнена успешно! Теперь можешь отправляться в свою комнату G-1325.
        Завтра я навещу тебя и объявлю результаты наблюдения</string>

    <string name="text12">(Какое-то у меня странное предчувствие..Черт с ним, завтра я уже буду у себя в
    квартире)</string>


    <string name="text13">Новая комната.. Так уютно, хотя совсем незнакомое место..мягкая кровать..
        Прям как настоящая квартира..Пора уже ложиться спать.</string>

    <string name="text_switchOff">выключить свет</string>
    <string name="text_switchOn">оставить включённым</string>

    <string name="final1">Так как вы оставили свет включённым скромник не пришёл к вам. Вы дождались
        утра и доктора Дэна. Вскоре вы отправились домой.</string>

    <string name="report1">Скромник не появляется при включённом свете или когда его можно хорошо разглядеть</string>

    <string name="text14">Почему-то я не могу уснуть. Чтож, придётся по старинке. Итак..
        В моей комнате находится кровать</string>
    <string name="text15">В моей комнате находится шкаф</string>
    <string name="text16">В моей комнате находится чьи-то фотографии</string>
    <string name="text17">В моей комнате находится дверь..</string>

    <string name="text18">(Кто.. Кто это? Не могу пошевелиться..)</string>

    <string name="text19">Хэй, хэй, привет, не спишь? Я же вижу, что ты не спишь. Как дела? Как жизнь?</string>
    <string name="text20">(…)</string>
    <string name="text21">Почему ты не отвечаешь.. Я напугал тебя? Прости, я не хотел..Я так одинок
        в последнее время, мне не с кем поговорить.. Все боятся меня..</string>
    <string name="text22">Никто не хочет видеть меня.. Но я хочу знать как я выгляжу..
        Я не могу сделать этого сам, мне нужен кто-то, кто опишет меня.. Помоги мне..</string>
    <string name="text23">Итак, открой глаза..</string>

    <string name="text24">(Он что..спятил? Что же делать, что же делать.. Я могу попытаться сбежать.
        Просто скину на него одеяло и выбегу из комнаты, там уже разберусь куда идти.. Итак..)</string>

    <string name="text_run">Бежать</string>
    <string name="text_nothing">Ничего не делать</string>

    <string name="final2">Вы выбежали из комнаты и встретили доктора Дэна. Ваша задача выполнена.
    Доктор Дэн похвалил проделанную работу и отпустил вас домой</string>

    <string name="report2">Если скромнику ограничить видимость, то он перестаёт "охотиться" И переходит в состояние "спокойный"</string>


    <string name="text25">Не хочешь? Тогда ты знаешь как я выгляжу? Какие у меня глаза?</string>

    <string name="eye1">Пустые</string>
    <string name="eye2">Уставшие</string>
    <string name="eye3">Сломанные</string>

    <string name="text26">Ох, они....Ты правда так думаешь? Ну ладно...А какие у меня руки?</string>

    <string name="hand1">Разбитые</string>
    <string name="hand2">Щупальца</string>
    <string name="hand3">Тонкие</string>

    <string name="text27">Наверное с ними должно быть неудобно</string>

    <string name="text28">Твоё описание - такое детальное.. Но оно отличается от других описаний..
        Пожалуйста, развей сомнения.. Посмотри на моё лицо.. Открой глаза</string>

    <string name="text29">(Да ни за что! Чутье мне подсказывает, что если открою - мне крышка!)</string>

    <string name="text30">Почему ты не хочешь открывать глаза? Ты боишься? Мы же друзья..
        Ты мне солгал? Ты не считаешь меня своим другом? Почему? Почему вы все мне врёте?</string>

    <string name="text31">ОТКРОЙ ГЛАЗА!</string>

    <string name="text32">(Почему голова так болит, это всё навождение, просто снится кошмар!)</string>

    <string name="text33">ОТКРОЙ ГЛАЗА!!</string>

    <string name="text34">(Черт, как же больно, это не навождение.. Это всё в за правду..)</string>

    <string name="text35">О нет, я сделал это..снова.. Я снова одинок..
        Почему никто не хочет помочь мне.. Извини.. Я не хотел.. Я просто хочу узнать как я выгляжу.. </string>

    <string name="text36">Я вынужден всегда прятаться в тени, чтобы меня никто не увидел..
        Все они боятся, они кричат.. Потом они замолкают.. Я не знаю почему.. Они больше не боятся меня,
        когда я выхожу на свет..Но они и не отвечают мне..Просто лежат на земле с пустыми глазами..</string>

    <string name="text37">Я думал ты тоже не будешь меня боятся.. Но я рад, что нам удалось поговорить..
        Я найду ещё кого-нибудь, кто сможешь сказать как я выгляжу.. Прощай</string>


    <string name="final3">Итак, сегодня 25 ноября 2001 года. Объект scp-096 был пойман, при его задержании
    капитан группы \"ЗУЛУ-9В\" надел мешок на голову объекта, после чего он перешел в состояни покоя. Его
    поместили в камеру содержания, имеющую форму стального куба 5х5х5м. Объекту присвоен класс \"Евклид\".
        Результат эксперимента: объект задержан и не несет опасности. Конец отчета.</string>
</resources>